# simulation_ecosystem

./: .gitignore  CMakeLists.txt  README.md
core/include/: food.h  settings.h
core/src/: food.cpp  main.cpp
cuda/include/: calculations.h  cuda_functions.h
cuda/src/: calculations.cpp  cuda_functions.cu
